Projeto Finalizado 1 CRUDS funcionando corretamente. Problema: decrementar a quantidade de assentos em vendas

--- a/ProjetoCinema/src/view/CadastroFilme.fxml
+++ b/ProjetoCinema/src/view/CadastroFilme.fxml
@@ -44,12 +44,12 @@
                         <TextField fx:id="tfCodigoGenero" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
-                  <Button id="btLimpar" fx:id="btLimpar" layoutX="233.0" layoutY="273.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="102.0" text="LIMPAR">
+                  <Button id="btLimpar" fx:id="btLimpar" layoutX="352.0" layoutY="273.0" mnemonicParsing="false" onAction="#limpar" prefHeight="53.0" prefWidth="102.0" text="LIMPAR">
                      <font>
                         <Font name="Arial" size="13.0" />
                      </font>
                   </Button>
-                  <Button id="btCadastrar" fx:id="btCadastrar" layoutX="352.0" layoutY="273.0" mnemonicParsing="false" onAction="#cadastrarFilme" prefHeight="53.0" prefWidth="102.0" text="CADASTRAR">
+                  <Button id="btCadastrar" fx:id="btCadastrar" layoutX="239.0" layoutY="273.0" mnemonicParsing="false" onAction="#cadastrarFilme" prefHeight="53.0" prefWidth="102.0" text="CADASTRAR">
                      <font>
                         <Font name="Arial" size="13.0" />
                      </font>
