--- a/ProjetoCinema/src/view/CadastroVenda1.fxml
+++ b/ProjetoCinema/src/view/CadastroVenda1.fxml
@@ -18,7 +18,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button fx:id="btEfetuarVenda" layoutX="299.0" layoutY="177.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="132.0" text="EFETUAR VENDA" />
+                  <Button fx:id="btEfetuarVenda" layoutX="299.0" layoutY="177.0" mnemonicParsing="false" onAction="#efetuarVenda" prefHeight="53.0" prefWidth="132.0" text="EFETUAR VENDA" />
                   <TextField fx:id="tfSessao" layoutX="123.0" layoutY="78.0" prefHeight="25.0" prefWidth="308.0" />
                </children>
             </AnchorPane>
